bk_ida/gccida/g2/adjust_address_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2440:36: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  adjust_address_1( rtx memref, machine_mode mode, __int64 offset, int validate, int adjust) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2444:4: error: expected ';' after expression
rtx v10; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2444:5: error: use of undeclared identifier 'v10'
rtx v10; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2447:4: error: expected ';' after expression
rtx v13; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2447:5: error: use of undeclared identifier 'v13'
rtx v13; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2450:4: error: expected ';' after expression
rtx v16; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2450:5: error: use of undeclared identifier 'v16'
rtx v16; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2451:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2453:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2455:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2456:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2456:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2461:4: error: expected ';' after expression
rtx addra; // [rsp+8h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2461:5: error: use of undeclared identifier 'addra'
rtx addra; // [rsp+8h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2463:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)memref[1]; 
               ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2467:15: error: expected expression
v10 = *( rtx *)( v8 + 16); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2467:1: error: use of undeclared identifier 'v10'
v10 = *( rtx *)( v8 + 16); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2479:1: error: use of undeclared identifier 'v10'
v10 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/emit-rtl.c:2481:1: error: use of undeclared identifier 'v13'
v13 = change_address_1( memref, mode, v12, validate); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/adjust_address_1/src/obj/emit-rtl.o] Error 1
